changec iController name, changed logging prints to loggers