@@ -1,7 +1,6 @@
 package controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
@@ -15,9 +14,10 @@ import javafx.stage.Stage;
 import javafx.stage.Window;
 import model.Client;
 import util.LocaleSingleton;
+import util.Trace;
 import view.GUI;
 
-public abstract class IController {
+public abstract class AbstractController {
     protected GUI gui;
     protected Client client = new Client();
     @FXML protected AnchorPane mainBoio;
@@ -29,7 +29,7 @@ public abstract class IController {
         List<Stage> stages = Window.getWindows().stream()
             .filter(Stage.class :: isInstance)
             .map(Stage.class :: cast)
-            .collect(Collectors.toList());
+            .toList();
         for (Stage stage : stages) {
             stage.close();
         }
@@ -40,11 +40,12 @@ public abstract class IController {
     }
 
     public void start() {
-        System.out.println("Starting");
+        Trace.out(Trace.Level.DEV, "Starting");
+
     };
 
     public void translate() {
-        System.out.println("Translating");
+        Trace.out(Trace.Level.DEV, "Translating");
         //this we fill in separate controllers, and where we switch the text in labels and such
     }
 
@@ -56,18 +57,18 @@ public abstract class IController {
         System.out.println("Language set to: " + localeSingleton.getLocale());
         if (localeSingleton.isRightToLeft()) {
             mainBoio.setNodeOrientation(NodeOrientation.RIGHT_TO_LEFT);
-            System.out.println("Right to left");
+            Trace.out(Trace.Level.DEV, "Right to left");
         } else {
             mainBoio.setNodeOrientation(NodeOrientation.LEFT_TO_RIGHT);
-            System.out.println("Left to right");
+            Trace.out(Trace.Level.DEV, "Left to right");
         }
     }
 
     @FXML
     public void initialize() {
         localeSingleton.getAvailableLocales().forEach(l -> languageDropdown.getItems().add(localeSingleton.getLanguageName(l)));
-        System.out.println(localeSingleton.getLocale());
-        System.out.println(localeSingleton.getAvailableLocales().indexOf(localeSingleton.getLocale()));
+        Trace.out(Trace.Level.DEV, String.valueOf(localeSingleton.getLocale()));
+        Trace.out(Trace.Level.DEV, String.valueOf(localeSingleton.getAvailableLocales().indexOf(localeSingleton.getLocale())));
         languageDropdown.getSelectionModel().select(localeSingleton.getAvailableLocales().indexOf(localeSingleton.getLocale()));
         languageDropdown.setPrefWidth(54);
         languageDropdown.setOnAction(event -> {
@@ -91,10 +92,10 @@ public abstract class IController {
         });
         if (localeSingleton.isRightToLeft()) {
             mainBoio.setNodeOrientation(NodeOrientation.RIGHT_TO_LEFT);
-            System.out.println("Right to left");
+            Trace.out(Trace.Level.DEV, "Right to left");
         } else {
             mainBoio.setNodeOrientation(NodeOrientation.LEFT_TO_RIGHT);
-            System.out.println("Left to right");
+            Trace.out(Trace.Level.DEV, "Left to right");
         }
         translate();
     }
